# zephyr_jerryscript

zephyr/: CMakeLists.txt  Kconfig  module.yml
